Don't delete special calendars. Do everything else - e.g. remove events, children...
Also suppress sharing notifications when it's a dav tester cleanup.